# shorcell

./: Cargo.toml  README.md
alkanes/shorcell-contract/: Cargo.toml
alkanes/shorcell-contract/src/: lib.rs
crates/shorcell-support/: Cargo.toml
crates/shorcell-support/src/: address.rs  constants.rs  lib.rs
crates/sphincsplus/: Cargo.toml
crates/sphincsplus/src/: .sha2.rs.swp  lib.rs  sign.rs
src/tests/: mod.rs  shorcell.rs
src/tests/std/: mod.rs  shorcell_contract_build.rs
